update README, change how we get the swagger JSON for redoc
