# docs/handlers.go
@@ -12,4 +12,8 @@ func Configure(api *operations.LedgerAPI) {
 	api.DocsGetDocHandler = docs.GetDocHandlerFunc(func(params docs.GetDocParams) middleware.Responder {
 		return NewGetDocOK()
 	})
+
+	api.DocsGetSwaggerHandler = docs.GetSwaggerHandlerFunc(func(params docs.GetSwaggerParams) middleware.Responder {
+		return NewGetSwaggerOK()
+	})
 }
